// <auto-generated />
using System;
using DogApp.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace DogApp.Migrations
{
    [DbContext(typeof(DataContext))]
    [Migration("20240312130437_New")]
    partial class New
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.2")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("DogApp.Modellayer.Model.DateCreate", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("Date")
                        .HasColumnType("datetime2");

                    b.HasKey("Id");

                    b.ToTable("DatesCreate");
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.ItemItemList", b =>
                {
                    b.Property<int>("ItemId")
                        .HasColumnType("int");

                    b.Property<int>("ItemListId")
                        .HasColumnType("int");

                    b.Property<int>("Id")
                        .HasColumnType("int");

                    b.HasKey("ItemId", "ItemListId");

                    b.HasIndex("ItemListId");

                    b.ToTable("ItemItemLists");

                    b.HasData(
                        new
                        {
                            ItemId = 1,
                            ItemListId = 1,
                            Id = 1
                        },
                        new
                        {
                            ItemId = 2,
                            ItemListId = 1,
                            Id = 2
                        },
                        new
                        {
                            ItemId = 3,
                            ItemListId = 1,
                            Id = 3
                        },
                        new
                        {
                            ItemId = 4,
                            ItemListId = 2,
                            Id = 4
                        },
                        new
                        {
                            ItemId = 5,
                            ItemListId = 2,
                            Id = 5
                        },
                        new
                        {
                            ItemId = 6,
                            ItemListId = 2,
                            Id = 6
                        },
                        new
                        {
                            ItemId = 7,
                            ItemListId = 3,
                            Id = 7
                        },
                        new
                        {
                            ItemId = 8,
                            ItemListId = 3,
                            Id = 8
                        },
                        new
                        {
                            ItemId = 9,
                            ItemListId = 3,
                            Id = 9
                        });
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.ItemList", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<int>("Number")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.ToTable("ItemLists");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Number = 0
                        },
                        new
                        {
                            Id = 2,
                            Number = 0
                        },
                        new
                        {
                            Id = 3,
                            Number = 0
                        });
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.Items.Item", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Image")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("ItemCategory")
                        .HasColumnType("int");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int?>("PlacementId")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("PlacementId");

                    b.ToTable("Items");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Description = "Description of Sign 1",
                            Image = "hest",
                            ItemCategory = 0,
                            Name = "Sign 1"
                        },
                        new
                        {
                            Id = 2,
                            Description = "Description of Sign 2",
                            Image = "hest",
                            ItemCategory = 0,
                            Name = "Sign 2"
                        },
                        new
                        {
                            Id = 3,
                            Description = "Description of Sign 3",
                            Image = "hest",
                            ItemCategory = 0,
                            Name = "Sign 3"
                        },
                        new
                        {
                            Id = 4,
                            Description = "Description of Sign 4",
                            Image = "hest",
                            ItemCategory = 0,
                            Name = "Sign 4"
                        },
                        new
                        {
                            Id = 5,
                            Description = "Description of Sign 5",
                            Image = "hest",
                            ItemCategory = 0,
                            Name = "Sign 5"
                        },
                        new
                        {
                            Id = 6,
                            Description = "Description of Extra 1",
                            Image = "hest",
                            ItemCategory = 1,
                            Name = "Extra 1"
                        },
                        new
                        {
                            Id = 7,
                            Description = "Description of Extra 2",
                            Image = "hest",
                            ItemCategory = 1,
                            Name = "Extra 2"
                        },
                        new
                        {
                            Id = 8,
                            Description = "Description of Extra 3",
                            Image = "hest",
                            ItemCategory = 1,
                            Name = "Extra 3"
                        },
                        new
                        {
                            Id = 9,
                            Description = "Description of Extra 4",
                            Image = "hest",
                            ItemCategory = 1,
                            Name = "Extra 4"
                        },
                        new
                        {
                            Id = 10,
                            Description = "Description of Extra 5",
                            Image = "hest",
                            ItemCategory = 1,
                            Name = "Extra 5"
                        });
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.Items.Placement", b =>
                {
                    b.Property<int>("PlacementId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("PlacementId"));

                    b.Property<int>("X")
                        .HasColumnType("int");

                    b.Property<int>("Y")
                        .HasColumnType("int");

                    b.HasKey("PlacementId");

                    b.ToTable("Placements");
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.Rally", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Category")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("DateId")
                        .HasColumnType("int");

                    b.Property<int>("Height")
                        .HasColumnType("int");

                    b.Property<int>("ItemListId")
                        .HasColumnType("int");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("Width")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("DateId");

                    b.HasIndex("ItemListId");

                    b.ToTable("Rally");
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.ItemItemList", b =>
                {
                    b.HasOne("DogApp.Modellayer.Model.Items.Item", "Item")
                        .WithMany("ItemItemLists")
                        .HasForeignKey("ItemId")
                        .OnDelete(DeleteBehavior.NoAction)
                        .IsRequired();

                    b.HasOne("DogApp.Modellayer.Model.ItemList", "ItemList")
                        .WithMany("ItemItemLists")
                        .HasForeignKey("ItemListId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Item");

                    b.Navigation("ItemList");
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.Items.Item", b =>
                {
                    b.HasOne("DogApp.Modellayer.Model.Items.Placement", null)
                        .WithMany("Items")
                        .HasForeignKey("PlacementId");
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.Rally", b =>
                {
                    b.HasOne("DogApp.Modellayer.Model.DateCreate", "Date")
                        .WithMany()
                        .HasForeignKey("DateId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("DogApp.Modellayer.Model.ItemList", "ItemList")
                        .WithMany()
                        .HasForeignKey("ItemListId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Date");

                    b.Navigation("ItemList");
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.ItemList", b =>
                {
                    b.Navigation("ItemItemLists");
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.Items.Item", b =>
                {
                    b.Navigation("ItemItemLists");
                });

            modelBuilder.Entity("DogApp.Modellayer.Model.Items.Placement", b =>
                {
                    b.Navigation("Items");
                });
#pragma warning restore 612, 618
        }
    }
}
