namespace DogApp.ModelLayer.Model;

public class Extra : Item
{
}
